--- a/JavaFX_MavenTemplate_VS1 2/src/main/resources/fxml/StartNewGame.fxml
+++ b/JavaFX_MavenTemplate_VS1 2/src/main/resources/fxml/StartNewGame.fxml
@@ -11,12 +11,12 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" prefWidth="1500" prefHeight="800" fx:id="rootPane" styleClass="new-game-scene">
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="components.StartNewGameController" prefWidth="1500" prefHeight="800" fx:id="rootPane" styleClass="new-game-scene">
     <!-- Options Box at the Top -->
     <top>
         <VBox alignment="TOP_RIGHT" spacing="10" style="-fx-padding: 10;">
             <Button fx:id="optionsButton" text="Options" styleClass="purple-button-smaller" />
-            <Button fx:id="rulesButton" text="Rules" styleClass="purple-button-smaller" />
+            <Button fx:id="rulesButton" text="Rules" onAction="#showRulesScreen" />
         </VBox>
     </top>
 
